[package]
name = "weboxide"
version = "0.1.4"
edition = "2024"
description = "Library for interacting with Discord webhooks"
repository = "https://github.com/mascararivers/weboxide"
license = "Apache-2.0 OR MIT"
rust-version = "1.85.0"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
